[gd_scene load_steps=34 format=2]

[ext_resource path="res://fonts/Guisol.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images/videos/0001-0119-1.ogv" type="VideoStream" id=2]
[ext_resource path="res://images/logos/github.png" type="Texture" id=3]
[ext_resource path="res://images/logos/globe.png" type="Texture" id=4]
[ext_resource path="res://prefabs/menu/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://images/icons/menu/star_2.png" type="Texture" id=7]
[ext_resource path="res://images/icons/menu/star_3.png" type="Texture" id=8]
[ext_resource path="res://images/icons/menu/planet_1.png" type="Texture" id=9]
[ext_resource path="res://images/textures/grain.jpg" type="Texture" id=10]
[ext_resource path="res://scripts/MenuUI.gd" type="Script" id=11]
[ext_resource path="res://images/logos/ilyva_black.png" type="Texture" id=12]
[ext_resource path="res://images/icons/shape73.png" type="Texture" id=13]
[ext_resource path="res://images/textures/paper.jpg" type="Texture" id=14]
[ext_resource path="res://images/logos/ilyva_white.png" type="Texture" id=15]
[ext_resource path="res://audios/effects/subway.wav" type="AudioStream" id=16]
[ext_resource path="res://fonts/PoetsenOne-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://images/logos/ilyva_full_white.png" type="Texture" id=18]
[ext_resource path="res://images/ui/swirl.png" type="Texture" id=19]
[ext_resource path="res://images/ui/angles.png" type="Texture" id=20]
[ext_resource path="res://audios/musics/Cosurmyne.mp3" type="AudioStream" id=21]
[ext_resource path="res://scripts/menu/TopPart.gd" type="Script" id=22]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 128, 128 )
margin_left = 64.0
margin_right = 64.0
margin_top = 64.0
margin_bottom = 64.0
modulate_color = Color( 0.141176, 0.137255, 0.137255, 1 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="Shader" id=26]
code = "/*
	Glitch Effect Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type canvas_item;

// 振動の強さ
uniform float shake_power = 0.03;
// 振動率
uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;
// 振動速度
uniform float shake_speed = 5.0;
// 振動ブロックサイズ
uniform float shake_block_size = 30.5;
// 色の分離率
uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.01;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( TIME * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = textureLod( SCREEN_TEXTURE, fixed_uv, 0.0 );
	pixel_color.r = mix(
		pixel_color.r
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( shake_color_rate, 0.0 ), 0.0 ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( -shake_color_rate, 0.0 ), 0.0 ).b
	,	enable_shift
	);
	COLOR = pixel_color;
}
"

[sub_resource type="ShaderMaterial" id=27]
shader = SubResource( 26 )
shader_param/shake_power = 0.03
shader_param/shake_rate = 0.2
shader_param/shake_speed = 5.0
shader_param/shake_block_size = 30.5
shader_param/shake_color_rate = 0.01

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.592157, 0.756863, 0.113725, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.0627451, 0.635294, 0.862745, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.858824, 0.156863, 0.109804, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 32
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.858824, 0.156863, 0.109804, 1 )

[sub_resource type="DynamicFont" id=17]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxLine" id=18]
color = Color( 1, 1, 1, 1 )
grow_begin = -32.0
grow_end = -32.0
thickness = 2

[node name="Menu" type="Control"]
script = ExtResource( 11 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Container" type="Control" parent="Canvas"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
theme = SubResource( 8 )

[node name="Background" type="ColorRect" parent="Canvas/Container"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.137255, 0.137255, 1 )

[node name="Control" type="Control" parent="Canvas/Container"]
anchor_top = 0.167
anchor_right = 1.0
anchor_bottom = 0.833
rect_clip_content = true

[node name="VideoPlayer" type="VideoPlayer" parent="Canvas/Container/Control"]
unique_name_in_owner = true
anchor_top = -0.167
anchor_right = 1.0
anchor_bottom = 1.167
margin_top = -94.0
margin_bottom = -94.0
stream = ExtResource( 2 )
autoplay = true

[node name="SharpCorners" type="Panel" parent="Canvas/Container"]
anchor_top = 0.167
anchor_right = 1.0
anchor_bottom = 0.833
margin_top = -0.200005
margin_bottom = 0.199951
custom_styles/panel = SubResource( 20 )

[node name="Grain" type="TextureRect" parent="Canvas/Container"]
modulate = Color( 1, 1, 1, 0.247059 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 4

[node name="Buttons" type="Panel" parent="Canvas/Container"]
anchor_top = 0.833
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.199951
rect_min_size = Vector2( 0, 100 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 16 )

[node name="HBoxContainer" type="HBoxContainer" parent="Canvas/Container/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -595.0
margin_top = -20.0
margin_right = 595.0
margin_bottom = 20.0
custom_constants/separation = 40
alignment = 1

[node name="Play" parent="Canvas/Container/Buttons/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 171.0
margin_right = 353.0
btn_label = "Jouer"
btn_icon = ExtResource( 7 )

[node name="Settings" parent="Canvas/Container/Buttons/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 393.0
margin_right = 575.0
btn_label = "Paramètres"
btn_icon = ExtResource( 7 )

[node name="Credits" parent="Canvas/Container/Buttons/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 615.0
margin_right = 797.0
btn_label = "Crédits"
btn_icon = ExtResource( 9 )

[node name="Quit" parent="Canvas/Container/Buttons/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 837.0
margin_right = 1019.0
btn_label = "Quitter"
btn_icon = ExtResource( 8 )

[node name="TopPart" type="Control" parent="Canvas/Container"]
anchor_right = 1.0
anchor_bottom = 0.193
margin_bottom = 0.0399933
script = ExtResource( 22 )

[node name="Spiral" type="TextureRect" parent="Canvas/Container/TopPart"]
modulate = Color( 0, 0, 0, 0.341176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -35.5
margin_right = 250.0
margin_bottom = 164.5
texture = ExtResource( 19 )
expand = true

[node name="Shadow" type="TextureRect" parent="Canvas/Container/TopPart"]
modulate = Color( 0, 0, 0, 0.74902 )
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 1.5
margin_top = 8.5
margin_right = -0.0801392
margin_bottom = 7.99799
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="IlyvaLogoRed" type="TextureRect" parent="Canvas/Container/TopPart"]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 1.5
margin_top = 0.5
margin_right = -0.0801392
margin_bottom = -0.00201416
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="Shape75" type="TextureRect" parent="Canvas/Container/TopPart"]
modulate = Color( 0, 0, 0, 0.74902 )
anchor_left = 0.616
anchor_top = 0.757
anchor_right = 0.616
anchor_bottom = 0.761
margin_left = -43.4799
margin_top = -43.223
margin_right = 136.52
margin_bottom = 36.221
rect_rotation = -116.5
rect_pivot_offset = Vector2( 90, 40 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Shape74" type="TextureRect" parent="Canvas/Container/TopPart"]
anchor_left = 0.616
anchor_top = 0.757
anchor_right = 0.616
anchor_bottom = 0.761
margin_left = -47.48
margin_top = -47.2229
margin_right = 132.52
margin_bottom = 32.2211
rect_rotation = -116.5
rect_pivot_offset = Vector2( 90, 40 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Glitch" type="ColorRect" parent="Canvas/Container/TopPart"]
material = SubResource( 27 )
anchor_left = 0.305
anchor_top = 0.173
anchor_right = 0.695
anchor_bottom = 2.187
margin_left = -0.400024
margin_top = -0.0470009
margin_right = 0.399902
margin_bottom = -59.993
__meta__ = {
"_edit_lock_": true
}

[node name="GreenDot" type="Panel" parent="Canvas/Container/TopPart"]
visible = false
margin_left = 665.0
margin_top = 72.0
margin_right = 703.0
margin_bottom = 90.0
custom_styles/panel = SubResource( 28 )

[node name="BlueDot" type="Panel" parent="Canvas/Container/TopPart"]
visible = false
margin_left = 626.0
margin_top = 209.0
margin_right = 664.0
margin_bottom = 227.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 30 )

[node name="RedDot" type="Panel" parent="Canvas/Container/TopPart"]
visible = false
margin_left = 516.0
margin_top = 30.0
margin_right = 534.0
margin_bottom = 48.0
custom_styles/panel = SubResource( 29 )

[node name="Credits" type="Panel" parent="Canvas/Container"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.0
margin_top = -269.0
margin_right = 278.0
margin_bottom = 269.0
rect_clip_content = true
custom_styles/panel = SubResource( 19 )

[node name="Noise" type="TextureRect" parent="Canvas/Container/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 7

[node name="Label" type="Label" parent="Canvas/Container/Credits"]
anchor_right = 1.0
margin_bottom = 32.0
text = "CREDITS.md"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Canvas/Container/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/Container/Credits/ScrollContainer"]
margin_right = 512.0
margin_bottom = 936.0
custom_constants/separation = 16
alignment = 1

[node name="Label3" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 49.0
text = "Aymeri, Manon, Thomas
Nicolas, Noé présente"
align = 1

[node name="IlyvaLogoRed" type="TextureRect" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 512.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 64 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="Label2" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 512.0
margin_bottom = 211.0
custom_fonts/font = SubResource( 17 )
text = "Toute ressemblance avec des personnes ou entreprises existantes ou ayant existé est purement fortuite et involontaire (en particulier une entreprise de métro agissant dans Lille)"
align = 1
valign = 1
autowrap = true

[node name="Panel" type="Panel" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_top = 227.0
margin_right = 512.0
margin_bottom = 227.0
custom_styles/panel = SubResource( 18 )

[node name="GridContainer" type="GridContainer" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 512.0
margin_bottom = 347.0
custom_constants/hseparation = 32
columns = 2

[node name="Label" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/GridContainer"]
margin_right = 241.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.815686, 0.815686, 0.815686, 1 )
text = "Développement"

[node name="Label2" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 273.0
margin_right = 488.0
margin_bottom = 23.0
text = "TOURNEUR AYMERI"

[node name="Label5" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 27.0
margin_right = 241.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.815686, 0.815686, 0.815686, 1 )
text = "Décors, personnages"

[node name="Label6" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 273.0
margin_top = 27.0
margin_right = 488.0
margin_bottom = 50.0
text = "LECLERCQ MANON"

[node name="Label3" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 54.0
margin_right = 241.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.815686, 0.815686, 0.815686, 1 )
text = "Modélisation 3D"

[node name="Label4" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 273.0
margin_top = 54.0
margin_right = 488.0
margin_bottom = 77.0
text = "TOURNEUR AYMERI"

[node name="Label7" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 81.0
margin_right = 241.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0.815686, 0.815686, 0.815686, 1 )
text = "Réalisation site"

[node name="Label8" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 273.0
margin_top = 81.0
margin_right = 488.0
margin_bottom = 104.0
text = "GYSEMANS THOMAS"

[node name="Label" type="LinkButton" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_top = 363.0
margin_right = 512.0
margin_bottom = 386.0
text = "sae25.sciencesky.fr"

[node name="Panel2" type="Panel" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_top = 402.0
margin_right = 512.0
margin_bottom = 402.0
custom_styles/panel = SubResource( 18 )

[node name="Label4" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_top = 418.0
margin_right = 512.0
margin_bottom = 441.0
custom_colors/font_color = Color( 0.882353, 0.882353, 0.882353, 1 )
text = "MERCI À"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_top = 457.0
margin_right = 512.0
margin_bottom = 669.0
rect_min_size = Vector2( 512, 0 )
alignment = 1

[node name="GridContainer2" type="GridContainer" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 17.0
margin_right = 495.0
margin_bottom = 212.0
custom_constants/hseparation = 64
columns = 2

[node name="Label" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_right = 207.0
margin_bottom = 23.0
text = "PHILIPPE MATTHIEU"

[node name="Label2" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_left = 271.0
margin_right = 478.0
margin_bottom = 23.0
text = "PHILIPPE MATTHIEU"

[node name="Label3" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_top = 27.0
margin_right = 207.0
margin_bottom = 50.0
text = "PHILIPPE MATTHIEU"

[node name="Label4" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_left = 271.0
margin_top = 27.0
margin_right = 478.0
margin_bottom = 50.0
text = "PHILIPPE MATTHIEU"

[node name="Label5" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_top = 54.0
margin_right = 207.0
margin_bottom = 77.0
text = "PHILIPPE MATTHIEU"

[node name="Label6" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_left = 271.0
margin_top = 54.0
margin_right = 478.0
margin_bottom = 77.0
text = "PHILIPPE MATTHIEU"

[node name="Label7" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_top = 81.0
margin_right = 207.0
margin_bottom = 104.0
text = "PHILIPPE MATTHIEU"

[node name="Label8" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_left = 271.0
margin_top = 81.0
margin_right = 478.0
margin_bottom = 104.0
text = "PHILIPPE MATTHIEU"

[node name="Label9" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_top = 108.0
margin_right = 207.0
margin_bottom = 131.0
text = "PHILIPPE MATTHIEU"

[node name="Label10" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_left = 271.0
margin_top = 108.0
margin_right = 478.0
margin_bottom = 131.0
text = "PHILIPPE MATTHIEU"

[node name="Label11" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_top = 135.0
margin_right = 207.0
margin_bottom = 158.0
text = "PHILIPPE MATTHIEU"

[node name="Label12" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_left = 271.0
margin_top = 135.0
margin_right = 478.0
margin_bottom = 158.0
text = "PHILIPPE MATTHIEU"

[node name="Label13" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_top = 162.0
margin_right = 207.0
margin_bottom = 185.0
text = "PHILIPPE MATTHIEU"

[node name="Label14" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_left = 271.0
margin_top = 162.0
margin_right = 478.0
margin_bottom = 185.0
text = "PHILIPPE MATTHIEU"

[node name="Label15" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer/GridContainer2"]
margin_top = 189.0
margin_right = 207.0
margin_bottom = 212.0
text = "PHILIPPE MATTHIEU"

[node name="Label5" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_top = 685.0
margin_right = 512.0
margin_bottom = 708.0
custom_colors/font_color = Color( 0.882353, 0.882353, 0.882353, 1 )
text = "BETA-TESTEURS"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer"]
margin_top = 724.0
margin_right = 512.0
margin_bottom = 936.0
rect_min_size = Vector2( 512, 0 )
alignment = 1

[node name="GridContainer2" type="GridContainer" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 17.0
margin_right = 495.0
margin_bottom = 212.0
custom_constants/hseparation = 64
columns = 2

[node name="Label" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_right = 207.0
margin_bottom = 23.0
text = "PHILIPPE MATTHIEU"

[node name="Label2" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_left = 271.0
margin_right = 478.0
margin_bottom = 23.0
text = "PHILIPPE MATTHIEU"

[node name="Label3" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_top = 27.0
margin_right = 207.0
margin_bottom = 50.0
text = "PHILIPPE MATTHIEU"

[node name="Label4" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_left = 271.0
margin_top = 27.0
margin_right = 478.0
margin_bottom = 50.0
text = "PHILIPPE MATTHIEU"

[node name="Label5" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_top = 54.0
margin_right = 207.0
margin_bottom = 77.0
text = "PHILIPPE MATTHIEU"

[node name="Label6" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_left = 271.0
margin_top = 54.0
margin_right = 478.0
margin_bottom = 77.0
text = "PHILIPPE MATTHIEU"

[node name="Label7" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_top = 81.0
margin_right = 207.0
margin_bottom = 104.0
text = "PHILIPPE MATTHIEU"

[node name="Label8" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_left = 271.0
margin_top = 81.0
margin_right = 478.0
margin_bottom = 104.0
text = "PHILIPPE MATTHIEU"

[node name="Label9" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_top = 108.0
margin_right = 207.0
margin_bottom = 131.0
text = "PHILIPPE MATTHIEU"

[node name="Label10" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_left = 271.0
margin_top = 108.0
margin_right = 478.0
margin_bottom = 131.0
text = "PHILIPPE MATTHIEU"

[node name="Label11" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_top = 135.0
margin_right = 207.0
margin_bottom = 158.0
text = "PHILIPPE MATTHIEU"

[node name="Label12" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_left = 271.0
margin_top = 135.0
margin_right = 478.0
margin_bottom = 158.0
text = "PHILIPPE MATTHIEU"

[node name="Label13" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_top = 162.0
margin_right = 207.0
margin_bottom = 185.0
text = "PHILIPPE MATTHIEU"

[node name="Label14" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_left = 271.0
margin_top = 162.0
margin_right = 478.0
margin_bottom = 185.0
text = "PHILIPPE MATTHIEU"

[node name="Label15" type="Label" parent="Canvas/Container/Credits/ScrollContainer/VBoxContainer/HBoxContainer2/GridContainer2"]
margin_top = 189.0
margin_right = 207.0
margin_bottom = 212.0
text = "PHILIPPE MATTHIEU"

[node name="VBoxContainer" type="HBoxContainer" parent="Canvas/Container"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -247.0
margin_top = -72.0
margin_right = -32.0
margin_bottom = -32.0
custom_constants/separation = 16
alignment = 2

[node name="Github" type="TextureButton" parent="Canvas/Container/VBoxContainer"]
margin_left = 135.0
margin_right = 167.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Website" type="TextureButton" parent="Canvas/Container/VBoxContainer"]
margin_left = 183.0
margin_right = 215.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Version" type="Label" parent="Canvas/Container"]
self_modulate = Color( 1, 1, 1, 0.498039 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 31.0
text = "1.0"
align = 2

[node name="DebugPuzzle" type="Button" parent="Canvas/Container"]
margin_left = 45.0
margin_top = 166.0
margin_right = 373.0
margin_bottom = 276.0
text = "debug puzzle"
align = 0
__meta__ = {
"_edit_group_": true
}

[node name="SpinBox" type="SpinBox" parent="Canvas/Container/DebugPuzzle"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -16.5
margin_bottom = 16.5
min_value = 1.0
max_value = 13.0
value = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -20.0
autoplay = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -40.0

[node name="Tween" type="Tween" parent="."]

[connection signal="finished" from="Canvas/Container/Control/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="Canvas/Container/Buttons/HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Canvas/Container/Buttons/HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Canvas/Container/Buttons/HBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Canvas/Container/Buttons/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Canvas/Container/VBoxContainer/Github" to="." method="_on_Github_pressed"]
[connection signal="pressed" from="Canvas/Container/VBoxContainer/Website" to="." method="_on_Website_pressed"]
[connection signal="pressed" from="Canvas/Container/DebugPuzzle" to="." method="_on_DebugPuzzle_pressed"]
